CORE-6009: Fixed search flannel z-index to be below customize bar and QFB and fixed table card layouting bug

--- a/app/styles/dataCards/search.sass
+++ b/app/styles/dataCards/search.sass
@@ -2,6 +2,8 @@
 @import dataCards/common/colors
 @import dataCards/common/layout
 
+$suggestion-tool-panel-z-index: 1001
+
 suggestion-tool-panel
   display: block
   height: 0
@@ -22,6 +24,8 @@ suggestion-tool-panel
   margin-bottom: 1rem
 
 .tool-panel.suggestion-tool-panel
+  z-index: $suggestion-tool-panel-z-index
+
   .tool-panel-main
     left: 15px
     width: 350px
